Hide header and switch on graph click with option to go back; Fixed layout issues

--- a/app/src/app/modules/home/experience-section/card-carousel/card-carousel.component.scss
+++ b/app/src/app/modules/home/experience-section/card-carousel/card-carousel.component.scss
@@ -43,7 +43,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      padding: 15px;
+      padding: 15px 30px;
       cursor: pointer;
 
       * {
